fix: trainer model on swaggger ui
